made a change to the instructions file

--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d7751d24-77d9-4992-9653-87b57500a9fd",
+   "metadata": {},
+   "source": [
+    "# Instructions for data class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82704713-5047-4b18-b80b-c77c959bd08f",
+   "id": "f6886f1e-59c8-48d4-873a-964ff4f369a2",
    "metadata": {},
    "outputs": [],
    "source": []
