made small changes to instructions notebook and data.py (figuring out git quickly)

--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -10,8 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f6886f1e-59c8-48d4-873a-964ff4f369a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"testing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1109e00d-955e-47bd-b43f-3aa1ae4a1f86",
    "metadata": {},
    "outputs": [],
    "source": []
