started working on data class and added first part of instructions

--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -9,27 +9,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e768003-cf81-4a3d-a204-f3cc10909e6e",
+   "metadata": {},
+   "source": [
+    "Before using the software package import numpy and pandas as shown below:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f6886f1e-59c8-48d4-873a-964ff4f369a2",
+   "id": "1109e00d-955e-47bd-b43f-3aa1ae4a1f86",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "testing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"testing\")"
+    "import numpy as np \n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1109e00d-955e-47bd-b43f-3aa1ae4a1f86",
+   "id": "824d6b04-70d2-4a92-950a-f9f009bf3a08",
    "metadata": {},
    "outputs": [],
    "source": []
