added some more things to instructions notebook to explian

--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -122,6 +122,414 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "34dad5bc-a187-4626-a4d3-c96f1975ceaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mf</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 01:00:00</th>\n",
+       "      <td>1922.4480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 02:00:00</th>\n",
+       "      <td>1921.8230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 03:00:00</th>\n",
+       "      <td>1926.3110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 04:00:00</th>\n",
+       "      <td>1923.1311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 05:00:00</th>\n",
+       "      <td>1930.1640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31 19:00:00</th>\n",
+       "      <td>1991.8264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31 20:00:00</th>\n",
+       "      <td>1995.2770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31 21:00:00</th>\n",
+       "      <td>2009.6525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31 22:00:00</th>\n",
+       "      <td>2042.8750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31 23:00:00</th>\n",
+       "      <td>2033.1330</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8759 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            mf\n",
+       "time                          \n",
+       "2019-01-01 01:00:00  1922.4480\n",
+       "2019-01-01 02:00:00  1921.8230\n",
+       "2019-01-01 03:00:00  1926.3110\n",
+       "2019-01-01 04:00:00  1923.1311\n",
+       "2019-01-01 05:00:00  1930.1640\n",
+       "...                        ...\n",
+       "2019-12-31 19:00:00  1991.8264\n",
+       "2019-12-31 20:00:00  1995.2770\n",
+       "2019-12-31 21:00:00  2009.6525\n",
+       "2019-12-31 22:00:00  2042.8750\n",
+       "2019-12-31 23:00:00  2033.1330\n",
+       "\n",
+       "[8759 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mhd_ch4_data.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0796a453-e938-4216-9503-6a8a58c773ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mf</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01</th>\n",
+       "      <td>1929.655930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-02</th>\n",
+       "      <td>1986.628246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-03</th>\n",
+       "      <td>1979.941342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-04</th>\n",
+       "      <td>1972.954192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-05</th>\n",
+       "      <td>1975.799358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-27</th>\n",
+       "      <td>1942.196393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-28</th>\n",
+       "      <td>1949.714527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-29</th>\n",
+       "      <td>1951.297047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-30</th>\n",
+       "      <td>1954.738287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31</th>\n",
+       "      <td>2008.961613</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>365 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     mf\n",
+       "time                   \n",
+       "2019-01-01  1929.655930\n",
+       "2019-01-02  1986.628246\n",
+       "2019-01-03  1979.941342\n",
+       "2019-01-04  1972.954192\n",
+       "2019-01-05  1975.799358\n",
+       "...                 ...\n",
+       "2019-12-27  1942.196393\n",
+       "2019-12-28  1949.714527\n",
+       "2019-12-29  1951.297047\n",
+       "2019-12-30  1954.738287\n",
+       "2019-12-31  2008.961613\n",
+       "\n",
+       "[365 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mhd_ch4_data.daily_average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "373dea2f-301f-49d2-8301-8208121dcd95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mf</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-31</th>\n",
+       "      <td>1946.409681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-02-28</th>\n",
+       "      <td>1966.917047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-31</th>\n",
+       "      <td>1947.198809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-30</th>\n",
+       "      <td>1984.648760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-05-31</th>\n",
+       "      <td>1955.658652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-06-30</th>\n",
+       "      <td>1940.293069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-31</th>\n",
+       "      <td>1923.550688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-08-31</th>\n",
+       "      <td>1940.555157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-30</th>\n",
+       "      <td>1963.554825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-10-31</th>\n",
+       "      <td>1967.657304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-11-30</th>\n",
+       "      <td>1984.422298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-12-31</th>\n",
+       "      <td>1969.825985</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     mf\n",
+       "time                   \n",
+       "2019-01-31  1946.409681\n",
+       "2019-02-28  1966.917047\n",
+       "2019-03-31  1947.198809\n",
+       "2019-04-30  1984.648760\n",
+       "2019-05-31  1955.658652\n",
+       "2019-06-30  1940.293069\n",
+       "2019-07-31  1923.550688\n",
+       "2019-08-31  1940.555157\n",
+       "2019-09-30  1963.554825\n",
+       "2019-10-31  1967.657304\n",
+       "2019-11-30  1984.422298\n",
+       "2019-12-31  1969.825985"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mhd_ch4_data.monthly_average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d273d8a1-3254-483b-bf46-2d4787026aa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>scale</th>\n",
+       "      <th>units</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>species</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>co2</th>\n",
+       "      <td>noaa</td>\n",
+       "      <td>ppm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ch4</th>\n",
+       "      <td>sio</td>\n",
+       "      <td>ppb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n2o</th>\n",
+       "      <td>sio</td>\n",
+       "      <td>ppb</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        scale units\n",
+       "species            \n",
+       "co2      noaa   ppm\n",
+       "ch4       sio   ppb\n",
+       "n2o       sio   ppb"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mhd_ch4_data.speciesinfo"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "1b9a50c0-9c24-443f-ac3f-bbcdeda12b53",
    "metadata": {},
