made small markdown cell change to instructions

--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -342,7 +342,7 @@
    "id": "caefe6ce-6fb7-4569-9ffb-edec203dede4",
    "metadata": {},
    "source": [
-    "The methods of the Data class are to calculate the daily and monthly averages of the data, these are calculated when initializing the Data class and the data frames produced containing the averages can be accessed using the following commands:"
+    "The methods of the Data class include plotting functions, residual plot functions and to calculate the daily and monthly averages of the data, the daily and monthly averages are calculated when initializing the Data class and the data frames produced containing the averages can be accessed using the following commands:"
    ]
   },
   {
